# Blogs

./: .gitignore  .gitmodules  readme.md
Activity_detection/: Human Activity Recogniztion Using Accelerometer data and ESP-DL.md  Human_Activity_Recognition.ipynb  building_with_espdl.md  readme.md
Activity_detection/esp_dl_formate_conversion/: Activity_calib.pickle  Activity_coefficient.hpp  Activity_model_2.onnx  Activity_model_2_optimized.onnx  esp_dl_formate_conversion.py  model (1).h5
Activity_detection/model_deployment/: sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3  sdkconfig.old
Activity_detection/model_deployment/main/: 1.txt  (+2 more)
Activity_detection/model_development/: Human_Activity_Recognition.ipynb  X_test.pkl  X_train.pkl  y_test.pkl  y_train.pkl
ESP-DL/: .gitmodules  1  building_with_espdl.md  dl.md  handrecognition_calib.pickle  handrecognition_coefficient.hpp  handrecognition_model_optimized.onnx  readme.md  y_cal.pkl  y_train.pkl
ESP-DL/esp_dl_formate_conversion/: esp_dl_formate_conversion.py  handrecognition_model.onnx
ESP-DL/model_deployment/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.old
ESP-DL/model_deployment/main/: CMakeLists.txt  app_main.cpp
ESP-DL/model_development/: model_development.ipynb  y_test.pkl
ESP-Matter(Demo)/Code_understanding/: code_understanding.md
ESP-Matter(Demo)/Getting_Started/: download.md  example_light.md  getting_started_with_matter_esp.md
ESP-Matter(Demo)/light_example/: example_light.md  step_by_step_building_commissioning.md
HMI/: blog.md
(+6 files in other folders)
